# omega-lock

./: .gitignore  AUTHORS.md  EASY_README.md  EASY_README_KR.md  IP_DEFENSE_CHECKLIST.md  LICENSE  NOTICE  PRE_EXISTING_IP.md  README.md  README_KR.md  pyproject.toml
.github/workflows/: encoding-check.yml
docs/demo/: omega-lock-demo.en.srt
examples/: _demo_output.txt  adapter_example.py  benchmark_battery.py  demo_replay.py  demo_sram.py  full_showcase.py  phantom_demo.py  rosenbrock_demo.py
examples/omega_lock_demos/: __init__.py  sram.py
scripts/: check_encoding.py
src/omega_lock/: __init__.py  adapters.py  benchmark.py  fitness.py  grid.py  kill_criteria.py  orchestrator.py  p2_tpe.py  params.py  random_search.py  stress.py  target.py  walk_forward.py
src/omega_lock/audit/: __init__.py  _scorecard.py  _target.py  _types.py
src/omega_lock/keyholes/: __init__.py  phantom.py  phantom_deep.py
tests/: test_adapters.py  test_audit.py  test_audit_hash_chain.py  test_auto_phase_tracking.py  test_benchmark.py  test_benchmark_regression.py  test_config_validation.py  test_constraint_aware_selection.py  test_constraint_uniqueness.py  test_demo_sram.py  test_fitness.py  test_grid.py  test_holdout.py  test_holdout_gate_mode.py  test_integration_phantom.py  test_integration_phantom_deep.py  test_integration_rosenbrock.py  test_iterative.py  test_iterative_advisory_and_gap.py  test_kc2_stress_edge_cases.py  test_kc4_pearson_status.py  test_kill_criteria.py  test_p2_tpe.py  test_random_search.py  test_sc2_advisory.py  test_sc2_negative_fitness.py  test_stress.py  test_walk_forward_cache.py  test_zooming.py
tests/fixtures/: benchmark_gold.json
